# MCCTP

./: gradle.properties
python/: pyproject.toml  remote_play.py
python/src/mcctp/: __init__.py  actions.py  client.py  state.py  sync_client.py
src/client/java/com/mcctp/: MCCTPClient.java
src/client/java/com/mcctp/action/: ActionDispatcher.java
src/client/java/com/mcctp/hud/: HotbarWheelRenderer.java
src/client/java/com/mcctp/item/: ItemCategorizer.java  ItemCategory.java
src/client/java/com/mcctp/network/: WebSocketFrameHandler.java
src/client/java/com/mcctp/state/: CombatContextInfo.java  GameStateCollector.java  GameStatePayload.java  HeldItemInfo.java  PlayerStateInfo.java
src/main/resources/: fabric.mod.json
