[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcctp"
version = "1.0.0"
description = "Python client for Minecraft Control Transfer Protocol"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
